2007-10-26  Jim Blandy  <jimb@codesourcery.com>

	* ax-gdb.c (gen_cast): Remove redundant assignment to
	value->type.  Doc fix.

	* ax-general.c (gen_traced_pop, gen_int_literal)
	(gen_usual_arithmetic): Check for typedefs.

2007-10-26  Joel Brobecker  <brobecker@adacore.com>

	* parse.c (prefixify_expression): Minor reformatting.

2007-10-25  Daniel Jacobowitz  <dan@codesourcery.com>

	* version.in: Use dot instead of dash.

2007-10-25  Daniel Jacobowitz  <dan@codesourcery.com>

	* linux-thread-db.c (check_for_thread_db): Only print if info_verbose.

2007-10-25  Pedro Alves  <pedro_alves@portugalmail.pt>

	* memory-map.c (parse_memory_map): Don't use an empty struct
	initializer.

2007-10-25  Pedro Alves  <pedro_alves@portugalmail.pt>

	* signals/signals.c (signals): Update pointer to enum
	target_signal declaration.

2007-10-25  Wu Zhou  <woodzltc@cn.ibm.com>
	    Carlos Eduardo Seo  <cseo@linux.vnet.ibm.com>
	    Jim Blandy  <jimb@codesourcery.com>

	* dwarf2read.c (read_partial_die): check the value
	of DW_AT_calling_convention in Fortran programs.

2007-10-25  Wu Zhou  <woodzltc@cn.ibm.com> 
	    Thiago Jung Bauermann  <bauerman@br.ibm.com>

	* c-exp.y (YYSTYPE): Add typed_val_decfloat for decimal
	floating point in YYSTYPE union.
	(DECFLOAT) Add token and expression element handling code.
	(parse_number): Parse DFP constants, which end with suffix 'df',
	'dd' or 'dl'.  Return DECFLOAT.
	* eval.c (evaluate_subexp_standard): Call value_from_decfloat to
	handle OP_DECFLOAT.
	* expression.h (enum exp_opcode): Add an opcode (OP_DECFLOAT)
	for DFP constants.
	(union exp_element): Add decfloatconst to represent DFP
	elements, which is 16 bytes by default.
	* parse.c (write_exp_elt_decfloatcst): New function to write a
	decimal float const into the expression.
	(operator_length_standard): Set operator length for OP_DECFLOAT
	to 4.
	* parser-defs.h (write_exp_elt_decfloatcst): Prototype.
	* valarith.c (value_neg): Add code to handle the negation